# glyphsets

./: .gitignore  CHANGELOG.md  Cargo.toml  GLYPHSETS.md  README.md  build.rs  build.sh  coverage.sh  pyproject.toml  renovate.json  requirements-dev.txt  requirements.txt  setup.py  setup.py-E
.github/: dependabot.yml
.github/github/workflows/: test.yml
.github/workflows/: checklang.yml  publish-release.yml  rust.yml  test.yml  update_pr.yml
GF glyphsets WIP/Latin/: README.md
GF glyphsets WIP/Latin/latin-core/: GFLatinCore.glyphs
GF glyphsets WIP/Latin/latin-minorities/: GFLatinMinorities.glyphs
GF glyphsets WIP/Latin/latin-plus/: GFLatinPlus.glyphs
GF_glyphsets/: assemble_charactersets.py  assemble_languages.py  empty_font.glyphs  update-gs.sh
GF_glyphsets/Arabic/definitions/: GF_Arabic_Core.stub.nam
GF_glyphsets/Arabic/glyphs/: CustomFilterGFArabic.plist  CustomFilter_GF_Arabic.plist  GFArabic_Core.glyphs  GFArabic_Plus.glyphs  GF_Arabic_Core.glyphs  GF_Arabic_Plus.glyphs
GF_glyphsets/Arabic/nam/: GF_Arabic_Core.nam  GF_Arabic_Plus.nam
GF_glyphsets/Arabic/txt/: GFArabic_Core.txt  GFArabic_Plus.txt
GF_glyphsets/Cyrillic/: GFCyrillicPlus.glyphs  README.md
GF_glyphsets/Cyrillic/definitions/: GF_Cyrillic_Plus.stub.glyphs  GF_Cyrillic_Pro.stub.nam
GF_glyphsets/Cyrillic/glyphs/: CustomFilterGFCyrillic.plist  CustomFilter_GF_Cyrillic.plist  GFCyrillic_PlusLoclRoman.glyphs  GF_Cyrillic_Core.glyphs  GF_Cyrillic_Plus.glyphs
GF_glyphsets/Greek/: GFGreekExpert.glyphs  GFGreekPro.glyphs
GF_glyphsets/Latin/: README.md
GF_glyphsets/Phonetics/: README.md
GF_glyphsets/TransLatin/: README.md
GF_glyphsets_WIP/: README.md  __init__.py
GF_glyphsets_WIP/Arabic/: GFArabicPlus.glyphs  README.md
GF_glyphsets_WIP/Cyrillic/: GFCyrillicCore.glyphs  GFCyrillicHistorical.glyphs  GFCyrillicPlusLocl-Italic.glyphs  GFCyrillicPro.glyphs
GF_glyphsets_WIP/Greek/: GFGreekAncientMusicalSymbols.glyphs  GFGreekCoptic.glyphs  GFGreekCore.glyphs  GFGreekPlus.glyphs
Lib/glyphsets/: __init__.py  __main__.py  codepoints.py  data.json  helpers.py  subsets.py  test_strings.json
namfiles-in/: znamenny_unique-glyphs.nam
scripts/: assemble_charactersets.py  assemble_description.py  assemble_languages.py  create-glyphset.py  find_language_for_character.py  preprocess_namfile.py
src/: lib.rs
tests/: __init__.py  test_dependencies.py  test_gf_glyphsets.py  test_glyphdata.py  test_glyphsets.py  test_teststrings.py  test_usage.py  testcoverage.py  testglyphdata.py
(+475 files in other folders)
