[package]
name = "google-fonts-glyphsets"
version = "1.1.0"
edition = "2021"
description = "Google Fonts font axis support data"
repository = "https://github.com/googlefonts/glyphsets"
license-file = "LICENSE"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml_ng = "0.10"
thiserror = "2.0.12"
google-fonts-languages = "*"

[build-dependencies]
glob = "0"
quote = "1.0"
proc-macro2 = "1.0"
syn = "2.0"
itertools = "0.13"
serde_json = "1.0.143"
prettyplease = "0.2"
